<resources>
    <string name="app_name">StudentApp</string>
    <string name="title_journal">Журнал</string>
    <string name="title_settings">Настройки</string>
    <string name="title_notes">Заметки</string>
    <string name="title_profile">Профиль</string>
    <string name="title_chat">Чат</string>

    <string name="emptiness">Здесь пока ничего нет :D</string>

    <string name="log">Войти</string>
    <string name="login">Авторизация</string>
    <string name="password">Пароль</string>
    <string name="email">Email</string>
    <string name="remember_me_checkbox">Запомнить меня</string>
    <string name="student_id">Номер студенческого билета</string>
    <string name="reset_password"><u>Забыли пароль?</u></string>

    <string name="register">Регистрация</string>
    <string name="registration">Регистрация</string>
    <string name="password_confirmation">Подтвердите пароль</string>
    <string name="to_login"><u>Перейти в окно авторизации</u></string>
    <string name="to_registration"><u>Нет аккаунта?</u></string>

    <string name="user_name">Иванов Александр Дмитриевич</string>
    <string name="user_group">Студент группы УВП-212</string>
    <string name="settings_account_block_title">Управление аккаунтом</string>
    <string name="safety">Безопасность</string>
    <string name="delete_account">Удалить аккаунт</string>
    <string name="ask_question">Задать вопрос</string>
    <string name="contactSupport">Связаться с поддержкой</string>
    <string name="review">Оставить отзыв</string>
    <string name="support_block_title">Помощь и обратная связь</string>
    <string name="todo">TODO</string>


    <string name="reset">Сброс</string>
    <string name="cancel">Отмена</string>
    <string name="reset_password_title">Сброс пароля</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>