<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat_green"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_journal"
        android:icon="@drawable/ic_journal_green"
        android:title="@string/title_journal" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile_green"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_notes"
        android:icon="@drawable/ic_notes_green"
        android:title="@string/title_notes" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_green"
        android:title="@string/title_settings" />

</menu>