<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    tools:context=".auth.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/parent_registration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/flow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:background="@drawable/blue_rounded_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.9">

            <TextView
                android:id="@+id/login_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login_email_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:background="@drawable/edit_text_background"
                android:imeOptions="flagNavigateNext"
                android:singleLine="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_textview"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.8">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:hint="@string/email"
                    android:imeOptions="flagNavigateNext"
                    android:singleLine="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reg_student_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/white_rounded_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/login_email_field"
                app:layout_constraintWidth_percent="0.8"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reg_student_id_field"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/white_rounded_background"
                    android:digits="0123456789"
                    android:hint="@string/student_id"
                    android:imeOptions="flagNavigateNext"
                    android:inputType="numberPassword"
                    android:singleLine="true"
                    tools:ignore="VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/edit_text_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/reg_student_id"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.8">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:singleLine="true"
                    tools:ignore="VisualLintTextFieldSize" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/login_Container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/flow"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textInputLayout2">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/rememberMeCheckBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/white_rounded_background"
                    android:gravity="center"
                    android:paddingVertical="13dp"
                    android:text="@string/remember_me_checkbox"
                    android:textColor="@color/main_blue"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:theme="@style/CustomCheckBox"
                    app:layout_constraintEnd_toStartOf="@+id/login_button"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.4" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/login_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/white_rounded_background"
                    android:text="@string/log"
                    android:textAllCaps="false"
                    android:textColor="@color/main_blue"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/rememberMeCheckBox"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_percent="0.3" />

                <TextView
                    android:id="@+id/to_registration"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:text="@string/to_registration"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/login_button" />

                <TextView
                    android:id="@+id/password_reset"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:gravity="center"
                    android:text="@string/reset_password"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@id/login_Container"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/to_registration" />

                <ProgressBar
                    android:id="@+id/progress_bar"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
